<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".fragments.LocationFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_last_known_location"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/CardViewStyle">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sm_last_location"
                android:id="@+id/last_location"
                style="@style/TitleTextStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_latitude"
                    android:id="@+id/last_known_latitude_label"
                    style="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/last_known_latitude"
                    style="@style/CardValueStyle" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_longitude"
                    android:id="@+id/last_known_longitude_label"
                    style="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/last_known_longitude"
                    style="@style/CardValueStyle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_current_location"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        style="@style/CardViewStyle">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sm_current_location"
                android:id="@+id/current_location"
                style="@style/TitleTextStyle" />

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sm_toggle_location_updates"
                android:id="@+id/toggleLocationUpdates" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_latitude"
                    android:id="@+id/latitude_label"
                    style="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/latitude"
                    style="@style/CardValueStyle" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_longitude"
                    android:id="@+id/longitude_label"
                    style="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/longitude"
                    style="@style/CardValueStyle" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sm_last_timestamp"
                android:id="@+id/last_timestamp_label"
                style="@style/CardLabelStyle"
                android:textSize="22sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/last_timestamp"
                style="@style/CardValueStyle" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>