<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".fragments.SensorsFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_accelerometer"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/CardViewStyle">
        <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent" android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sm_accelerometer"
                android:id="@+id/accelerometer_label"
                style="@style/TitleTextStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent" android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_x"
                    android:id="@+id/accelerometer_x_label"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:theme="@style/CardLabelStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/accelerometer_x"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_y"
                    android:id="@+id/accelerometer_y_label"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" android:theme="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/accelerometer_y"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_z"
                    android:id="@+id/accelerometer_z_label"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" android:theme="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/accelerometer_z"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_gravity"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/CardViewStyle"
        android:visibility="gone">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sm_gravity"
        android:id="@+id/gravity_label"
        style="@style/TitleTextStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm_x"
            android:id="@+id/gravity_x_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/gravity_x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm_y"
            android:id="@+id/gravity_y_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/gravity_y" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm_z"
            android:id="@+id/gravity_z_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/gravity_z" />
    </LinearLayout>
            </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_gyroscope"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/CardViewStyle">
        <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent" android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sm_gyroscope"
                android:id="@+id/gyroscope_label"
                style="@style/TitleTextStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_x"
                    android:id="@+id/gyroscope_x_label"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" android:theme="@style/CardLabelStyle"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/gyroscope_x"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_y"
                    android:id="@+id/gyroscope_y_label"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" android:theme="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/gyroscope_y"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sm_z"
                    android:id="@+id/gyroscope_z_label"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" android:theme="@style/CardLabelStyle" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/gyroscope_z"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>